# poseidon-rust

./: Cargo.toml  README.md  bls12_381_constants.txt  constants.txt
src/: lib.rs  main.rs  read_constants.rs
