[package]
name = "poseidon-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#arkworks
ark-ff = "0.4.0"
ark-bn254 = { version = "0.4.0" }
ark-std = { version = "0.4.0" }

hex = "0.4.3"

[lib]
name = "poseidon_lib"
path = "src/lib.rs"